# LLMTeacher

./: .env.example  .gitignore  CHUNKING_IMPROVEMENTS.md  FIX_CHAPTER_BUG.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CHUNKING.md  SETUP.md  START_HERE.md  add_error_resilience.py  add_progress_bar.py  app.py  compare_chunking.py  config.py  configure_context.py  fix_chapters.py  fix_chunk_size.py  pyproject.toml  quick_test.py  requirements.txt  run.sh  run_app.sh  test_chunking.py  test_setup.py
examples/: chunking_example.py
src/: chapter_processor.py  context_manager.py  document_parser.py  exercise_generator.py  llm_client.py  text_splitter.py  toc_parser.py  topic_extractor.py
static/css/: style.css
static/js/: main.js
templates/: base.html  learning_plan.html  study.html  upload.html
